--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -1,7 +1,8 @@
 header#main-header{
     width: 100%;
     height: 60px;
-    background:#da552f;
+    background-color: #3f0d12;
+      
     font-size: 18px;
     font-weight: bold;
     color:#fff;
