Adicionando navegação para pagina Produtos

--- a/src/styles.css
+++ b/src/styles.css
@@ -8,5 +8,6 @@
 body{
     font-family: Arial, Helvetica, sans-serif;
   background:#DDD;
+/* background: linear-gradient(to bottom, #d2d1d1 0%, #545454 100%); */
     color:#333;
 }
